@@ -55,7 +55,6 @@
     </modules>
 
     <properties>
-        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <dependencies.version>2.7.17</dependencies.version>
@@ -74,6 +73,7 @@
         <wire.plugin.version>3.0.2</wire.plugin.version>
         <wire.suffix></wire.suffix>
         <spotless.version>2.44.4</spotless.version>
+        <m2e.apt.activation>disabled</m2e.apt.activation><!-- used by Eclipse -->
     </properties>
 
     <dependencyManagement>
@@ -85,7 +85,21 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.github.zafarkhaja</groupId>
                 <artifactId>java-semver</artifactId>
@@ -163,9 +177,31 @@
                             <arg>-Xlint:-processing</arg>
                             <arg>-Xlint:-serial</arg>
                         </compilerArgs>
+                        <annotationProcessorPaths>
+                            <dependency>
+                                <groupId>org.immutables</groupId>
+                                <artifactId>value</artifactId>
+                                <version>${immutables.version}</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>com.fasterxml.jackson.core</groupId>
+                                <artifactId>jackson-core</artifactId>
+                                <version>${jackson.version}</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>com.fasterxml.jackson.core</groupId>
+                                <artifactId>jackson-annotations</artifactId>
+                                <version>${jackson.version}</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>com.fasterxml.jackson.core</groupId>
+                                <artifactId>jackson-databind</artifactId>
+                                <version>${jackson.version}</version>
+                            </dependency>
+                        </annotationProcessorPaths>
                         <showWarnings>true</showWarnings>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
+                        <source>${java.specification.version}</source>
+                        <target>${java.specification.version}</target>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -222,6 +258,7 @@
             </plugins>
         </pluginManagement>
 
+        <finalName>${project.artifactId}-jdk${java.specification.version}-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.jfrog.buildinfo</groupId>
@@ -336,19 +373,29 @@
         </profile>
 
         <profile>
-            <id>jdk-17</id>
+            <id>jdk-16+</id>
             <activation>
-                <jdk>17</jdk>
+                <jdk>(16,]</jdk>
             </activation>
             <properties>
-                <java.version>17</java.version>
                 <dependencies.version>3.2.1</dependencies.version>
                 <wire.version>4.9.1</wire.version>
                 <wire.plugin.version>3.0.2</wire.plugin.version>
                 <wire.suffix>-jvm</wire.suffix>
             </properties>
+            <dependencies>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>${mockito.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-subclass</artifactId>
+                <version>${mockito.version}</version>
+            </dependency>
+            </dependencies>
             <build>
-                <finalName>${project.artifactId}-jdk17-${project.version}</finalName>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -360,45 +407,21 @@
                                 <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                             </compilerArgs>
                             <showWarnings>true</showWarnings>
-                            <source>${java.version}</source>
-                            <target>${java.version}</target>
+                            <source>${java.specification.version}</source>
+                            <target>${java.specification.version}</target>
                         </configuration>
                     </plugin>
                 </plugins>
             </build>
         </profile>
-
         <profile>
-            <id>jdk-21</id>
+            <id>jdk-23+</id>
             <activation>
-                <jdk>21</jdk>
+                <jdk>(23,]</jdk>
             </activation>
             <properties>
-                <java.version>21</java.version>
-                <dependencies.version>3.2.1</dependencies.version>
-                <wire.version>4.9.1</wire.version>
-                <wire.plugin.version>3.0.2</wire.plugin.version>
-                <wire.suffix>-jvm</wire.suffix>
+                <dependencies.version>3.5.8</dependencies.version>
             </properties>
-            <build>
-                <finalName>${project.artifactId}-jdk21-${project.version}</finalName>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <!-- @see https://github.com/immutables/immutables/issues/1339#issuecomment-1016125673 -->
-                        <configuration>
-                            <fork>true</fork>
-                            <compilerArgs combine.children="append">
-                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                            </compilerArgs>
-                            <showWarnings>true</showWarnings>
-                            <source>${java.version}</source>
-                            <target>${java.version}</target>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
     </profiles>
 
